--- a/css/dark.css
+++ b/css/dark.css
@@ -26,3 +26,7 @@ nav ul {font-size:0.75rem; text-align:left; list-style:none; list-style-image:no
 nav ul li {display:inline-block; margin:10px 0px 7px 0px;}
 nav ul li a { color:#408080; background:#1D1D1D; border-top:1px solid #2B2B2B; border-left:1px solid #202020; border-right:1px solid #202020; border-top-left-radius:2px; border-top-right-radius:2px; text-decoration:none; padding:6px 8px 7px 8px;}
 nav ul li a.active {color:#96C7D7; background:#212121; border-top:1px solid #3E3E3E; border-left:1px solid #2D2D2D; border-right:1px solid #2D2D2D; border-top-left-radius:2px; border-top-right-radius:2px; text-decoration:none; padding:6px 8px 9px 8px;}
+
+.secondary-nav {width:90%; background:#1D1D1D; color:#FFEE88; font-size:0.75rem; border:1px solid #2D2D2D; border-radius:3px; margin:10px auto 10px auto; box-shadow:inset 0 1px 1px rgba(0,0,0,0.39),0 0px 0 rgba(255,255,255,0.16);}
+.secondary-nav div {padding:5px;}
+.secondary-nav a {color:#FFEE88; text-decoration:none;}
