--- a/core/css/dark.css
+++ b/core/css/dark.css
@@ -1,16 +1,25 @@
 /** Responsive Mobile Layout: 480px and below. */
 @media only screen and (max-width:480px) {
-
+.login, .register, .forgot {font-size:0.8rem; margin:10px auto; padding:20px; background:#242424; border-radius:5px; max-width:250px; position:relative;}
+.form-wrapper {text-align:center; background:#292929; border-radius:2px; margin:5px auto; position:relative; max-width:200px;}
+.form-item input {border:none; background:#3b4148; border-radius:2px; color:#fff; font-family:'Open Sans', sans-serif; font-size:1rem; height:30px; padding:2px; width:100%;}
+.button-panel .button {background:#577A9C; border:none; border-radius:2px; color:#fff; cursor:pointer; height:30px; font-family:'Open Sans', sans-serif; font-size:1.2rem; letter-spacing:0.05rem; text-align:center; text-transform:uppercase; width:100%;}
 }
 
 /** Responsive Tablet Layout: 481px to 768px. */
 @media only screen and (min-width:481px) and (max-width:768px) {
-
+.login, .register, .forgot {font-size:0.8rem; margin:10px auto; padding:20px; background:#242424; border-radius:5px; max-width:300px; position:relative;}
+.form-wrapper {text-align:center; background:#292929; border-radius:2px; margin:10px auto; position:relative; max-width:250px;}
+.form-item input {border:none; background:#3b4148; border-radius:2px; color:#fff; font-family:'Open Sans', sans-serif; font-size:1rem; height:40px; padding:0 16px; width:100%;}
+.button-panel .button {background:#577A9C; border:none; border-radius:2px; color:#fff; cursor:pointer; height:40px; font-family:'Open Sans', sans-serif; font-size:1.2rem; letter-spacing:0.05rem; text-align:center; text-transform:uppercase; width:100%;}
 }
 
 /** Responsive Desktop Layout: 769px to a max of screen size. */
 @media only screen and (min-width:769px) {
-
+.login, .register, .forgot {font-size:0.8rem; margin:10px auto; padding:20px; background:#242424; border-radius:5px; max-width:350px; position:relative;}
+.form-wrapper {text-align:center; background:#292929; border-radius:2px; margin:10px auto; position:relative; max-width:300px;}
+.form-item input {border:none; background:#3b4148; border-radius:2px; color:#fff; font-family:'Open Sans', sans-serif; font-size:1rem; height:50px; padding:0 16px; width:100%;}
+.button-panel .button {background:#577A9C; border:none; border-radius:2px; color:#fff; cursor:pointer; height:50px; font-family:'Open Sans', sans-serif; font-size:1.2rem; letter-spacing:0.05rem; text-align:center; text-transform:uppercase; width:100%;}
 }
 
 * {margin:0; padding:0; box-sizing:border-box;}/* Simple Reset */
@@ -21,6 +30,12 @@ header {margin:8px auto 2px auto; width:90%;}
 header .logo {width:50%; float:left;}
 header .padder {height:0; clear:both;}
 
+footer {background:#292929; border:1px solid #292929; width:90%; margin:10px auto 5px auto; padding:3px;}
+.footer-left {float:left; width:50%;}
+.footer-right {float:left; font-size:0.65rem; text-align:right; width:50%;}
+footer .footer-right a {color:#96C7D7; font-size:0.65rem; text-decoration:none;}
+footer .padder {height:0; clear:both;}
+
 nav {background:#171717; border-top:1px solid #2D2D2D; border-bottom:1px solid #3E3E3E;}
 nav ul {font-size:0.75rem; text-align:left; list-style:none; list-style-image:none; padding:0; margin:0px auto 0px auto; width:90%;}
 nav ul li {display:inline-block; margin:10px 0px 7px 0px;}
@@ -30,3 +45,21 @@ nav ul li a.active {color:#96C7D7; background:#212121; border-top:1px solid #3E3
 .secondary-nav {width:90%; background:#1D1D1D; color:#FFEE88; font-size:0.75rem; border:1px solid #2D2D2D; border-radius:3px; margin:10px auto 10px auto; box-shadow:inset 0 1px 1px rgba(0,0,0,0.39),0 0px 0 rgba(255,255,255,0.16);}
 .secondary-nav div {padding:5px;}
 .secondary-nav a {color:#FFEE88; text-decoration:none;}
+
+.wrapper {width:90%; margin:10px auto 0px auto;}
+.register-header, .login-header, .forgot-header {background:#242424; color:#96C7D7; font-size:0.8rem; padding:5px; border:1px solid #3E3E3E;}
+.register-content, .login-content, .forgot-content {background:#292929; text-align:center; font-size:0.8rem; color:#408080; word-wrap:break-word; padding:5px; border:1px solid #3E3E3E; border-top:none;}
+
+.form-wrapper form {text-align:left; padding:30px 20px 0;}
+.form-item {margin-bottom:10px; width:100%;}
+.form-item input:focus {background:#4d545e; outline:none;}
+.button-panel {margin:15px 0 0; width:100%;}
+.button-panel .button:hover {background:#577A8C; cursor:pointer;}
+.form-footer {font-size:0.9rem; padding:20px 0; text-align:center;}
+.form-footer p {padding:0px 0px 7px 0px;}
+.form-footer a {text-decoration:none;}
+.form-footer a:hover {color:#577A8C;}
+
+.theme-option {width:100%; background:#292929; color:#408080; border:1px solid #3E3E3E; border-radius:2px; padding:2px;}
+.theme-submit-btn {cursor:pointer; color:#408080; background:#292929; margin:0px auto; padding:1px 3px 1px 3px; border:1px solid #3E3E3E; border-left:none; border-radius:2px;}
+.theme-submit-btn:hover {cursor:pointer; color:#96C7D7;}
