--- a/core/css/light.css
+++ b/core/css/light.css
@@ -191,3 +191,10 @@ nav ul li a.active {color:#7AA21B; background:#F0F0F0; border-top:1px solid #F0F
 .search-header form .search-btn:hover, .wrapper form .search-btn:hover {cursor:pointer; color:#7AA21B;}
 .search-content {text-align:left;}
 .search-form {text-align:right;}
+
+.shoutbox-header {background:#DADADA; color:#7AA21B; font-size:0.8rem; padding:5px; border:1px solid #DADADA;}
+.shoutbox-content {background:#FFFFFF; text-align:left; font-size:0.8rem; color:#408080; word-wrap:break-word; padding:5px; border:1px solid #DADADA; border-top:none; height:120px; overflow:auto;}
+.shoutbox-form {background:#DADADA; color:#7AA21B; font-size:0.8rem; margin:0px auto; border:1px solid #DADADA; padding:5px; border-top:none;}
+.shoutbox-input {width:30%; background:#FFFFFF; color:#408080; border:1px solid #DADADA; border-radius:2px; padding:2px;}
+.shoutbox-submit-btn {cursor:pointer; outline-color:#7AA21B; color:#408080; background:#FFFFFF; margin:0px auto; padding:2px; border:1px solid #DADADA; border-radius:2px;}
+.shoutbox-submit-btn:hover {cursor:pointer; color:#7AA21B;}
