--- a/core/css/light.css
+++ b/core/css/light.css
@@ -163,7 +163,10 @@ nav ul li a.active {color:#7AA21B; background:#F0F0F0; border-top:1px solid #F0F
 
 .private-main-content {text-align:left;}
 .private-main-content span {font-size:0.7rem;}
-.private-main-footer {font-size:0.8rem; background:#DADADA; color:#408080; min-height:20px; border:1px solid #DADADA; text-align:left; margin:0px auto 0px auto; padding:5px; border-top:none;}
+.private-main-footer {font-size:0.8rem; background:#DADADA; color:#408080; min-height:20px; border:1px solid #DADADA; margin:0px auto 0px auto; padding:5px; border-top:none;}
+.private-main-footer .left {float:left; text-align:left; width:50%;}
+.private-main-footer .right {float:left; text-align:right; width:50%;}
+.private-main-footer .padder {height:0; clear:both;}
 
 .private-compose-input {width:80%; outline-color:#7AA21B; background:#FFFFFF; color:#408080; border:1px solid #DADADA; border-radius:2px; margin:0px auto 10px auto; padding:5px;}
 .private-compose-textarea {width:80%; outline-color:#7AA21B; height:150px; background:#FFFFFF; color:#408080; border:1px solid #DADADA; border-radius:2px; margin:0px auto 10px auto; padding:5px;}
