--- a/core/css/light.css
+++ b/core/css/light.css
@@ -93,8 +93,8 @@ nav ul li {display:inline-block; margin:10px 0px 7px 0px;}
 nav ul li a { color:#7AA21B; background:#DADADA; border-top:1px solid #DADADA; border-left:1px solid #DADADA; border-right:1px solid #DADADA; border-top-left-radius:2px; border-top-right-radius:2px; text-decoration:none; padding:6px 8px 7px 8px;}
 nav ul li a.active {color:#7AA21B; background:#F0F0F0; border-top:1px solid #F0F0F0; border-left:1px solid #F0F0F0; border-right:1px solid #F0F0F0; border-top-left-radius:2px; border-top-right-radius:2px; text-decoration:none; padding:6px 8px 9px 8px;}
 
-.secondary-nav {width:90%; background:#FCF7D7; color:#000000; font-size:0.75rem; border:1px solid #E1D47E; border-radius:3px; margin:10px auto 10px auto; /**box-shadow:inset 0 1px 1px rgba(0,0,0,0.39),0 0px 0 rgba(255,255,255,0.16);*/}
-.secondary-nav div {padding:5px;}
+.secondary-nav, .announcement-board {width:90%; background:#FCF7D7; color:#000000; font-size:0.75rem; border:1px solid #E1D47E; border-radius:3px; margin:10px auto 10px auto; /**box-shadow:inset 0 1px 1px rgba(0,0,0,0.39),0 0px 0 rgba(255,255,255,0.16);*/}
+.secondary-nav div, .announcement-board div {padding:5px;}
 .secondary-nav a {color:#000000; text-decoration:none;}
 
 .wrapper {width:90%; margin:10px auto 0px auto;}
